GNOME Bugzilla – Bug 695571
"Preferences" in app menu opens the wrong dialog
Last modified: 2013-03-10 15:16:09 UTC
Clicking "Preferences" in the app menu opens the foreground window's profile preferences. It should open the terminal's global preferences (which are otherwise impossible to access, when I hide menubar by default). gnome-terminal 3.7.2, 3.7.91
This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.