appmenu: Open global prefs dialogue

https://bugzilla.gnome.org/show_bug.cgi?id=695571